--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
 }
 
-header{
+header {
     overflow: hidden;
 }
 
@@ -11,30 +11,19 @@ p, ol, ul{
     margin-top: 0;
 }
  
-p {
-    line-height: 180%;
-}
  
-ol, ul{
+ol, ul {
     padding: 0;
     list-style: none;
-}
-
-     
-.container{   
-    /* Set width of container to
-        1200px and align center */
-    margin: 0px auto;
-    width: 1200px;
 }
 
 /*************************/
 /*    Styling  Header    */
 /*************************/
-.hero-image{
+.hero-image {
     background-image: url("images/lorenzo_headshot.jpg");
     background-color: #cccccc;
-    height: 500px;
+    height: 524px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -44,54 +33,53 @@ ol, ul{
 /******************/   
 /* Styling Banner */
 /******************/
-.hero-text{
+.hero-text {
     text-align: left;
-    height: 60px;
     color: white;
+    letter-spacing: 0.07em;
+    text-transform: uppercase;
 }
 
-.name{
+.name {
     float: left;
-    padding: none;
+    width: auto;
     margin: none;
-    height: 60px;
-    width: 30%;
+    font-family: Proxima Nova;
+    font-weight: 650;
+    font-size: 17px;
     padding-left: 20px;
-    padding-top: 8px;
-    font-weight: 500;
-    font-size: 14px;
+    padding-top: 30px;
 }
   
 /***************************/
 /* Styling Navigation Menu */
 /***************************/
-.menu{
+.menu {
     float: right;
     width: auto;
     height: 100%;
     margin: none;
     padding-top: 14px;
-    padding-right: 30px;
+    padding-right: 27px;
 }
 
-.menu ul{
+.menu ul {
     text-align: center;
     float: right;
     margin: none;
 }
 
-.menu li{
+.menu li {
     display: inline-block;
     padding: none;
     margin: 15px;
 }
 
-.menu a{
+.menu a {
     margin:auto;
     text-decoration: none;
-    font-weight: 710;
-    font-size: 14px;
-    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 13px;
     color: white;
     
 }
@@ -105,16 +93,16 @@ ol, ul{
 /***************************/
 /* Styling Body */
 /***************************/
-
-#content h1 {
-    font-size: 10px;
+body p {
+    line-height: 100%;
 }
 
-#content img {
+body img {
     position:static;
-    bottom: 8px;
-    left: 16px;    
-    top: 100px;
+    width: 200px;
+    height: 300px;
+    object-fit: scale-down;
+    
 }
 
 /***************************/
