--- a/css/resume-style.css
+++ b/css/resume-style.css
@@ -25,6 +25,28 @@ ol, ul {
     list-style: none;
 }
 
+h1, h2, h3, h4, h5 {
+    font-size: 30px;
+}
+
+.content {
+    padding-left: 7%;
+    padding-right: 7%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+
+.education {
+    width: 75%;
+}
+
+.education-aside {
+    width: 25%;
+}
+
+
+
+
 .name {
     float: left;
     width: auto;
@@ -74,6 +96,9 @@ ol, ul {
     color: white;
     text-decoration: none;
   }
+
+
+
 
 footer {
     background-color:darkslategray;
