--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,19 @@ body {
 
 header {
     overflow: hidden;
+    background-color:#465060;
+    padding-bottom: 10px;
+    padding-top: 5px;
+    text-align: left;
+    color: white;
+    letter-spacing: 0.07em;
+    text-transform: uppercase;
+
 }
 
 p, ol, ul{
     margin-top: 0;
+    margin-bottom: 5px;
 }
  
  
@@ -20,6 +29,8 @@ ol, ul {
 /*************************/
 /*    Styling  Header    */
 /*************************/
+
+
 .hero-image {
     background-image: url("../images/lorenzo-mondragon-headshot.jpg");
     background-color: #cccccc;
@@ -33,22 +44,21 @@ ol, ul {
 /******************/   
 /* Styling Banner */
 /******************/
-.hero-text {
-    text-align: left;
-    color: white;
-    letter-spacing: 0.07em;
-    text-transform: uppercase;
-}
-
 .name {
     float: left;
     width: auto;
     margin: none;
+    
+    padding-left: 25px;
+    padding-top: 30px;
+}
+
+.name a {
+    text-decoration: none;
     font-family: Proxima Nova;
     font-weight: 650;
-    font-size: 17px;
-    padding-left: 20px;
-    padding-top: 30px;
+    font-size: 19px;
+    color: white;
 }
   
 /***************************/
@@ -71,25 +81,31 @@ ol, ul {
 
 .menu li {
     display: inline-block;
-    padding: none;
-    margin: 15px;
+    margin-left: 14px;
+    margin-right: 14px;
+    padding-top: 17px;
+    padding-bottom: 17px;
+    padding-left: 3px;
+    padding-right: 3px;
 }
+
+.menu li:hover {
+    color: white;
+    text-decoration: none;
+    display: inline-block;
+    background-color: black;
+    box-shadow: 0 0 0 20px black;
+    width: auto;
+  }
 
 .menu a {
     margin:auto;
     text-decoration: none;
     font-weight: 700;
-    font-size: 13px;
+    font-size: 14px;
     color: white;
-    
+    display: block;
 }
-
-.menu a:hover {
-    background-color: black;
-    color: white;
-    text-decoration: none;
-  }
-
 /***************************/
 /* Styling Body */
 /***************************/
@@ -108,20 +124,19 @@ main {
 main h1 {
     font-size: 30px;
     font-weight: 400;
-    color:darkslategray;
+    color:#94b49c;
     padding-bottom: 10px;
     word-spacing: 20px;
 }
 
 main p {
     word-spacing: 4px;
-    color:dimgray;
     font-size: 20px;
     font-family: asap;
 }
 
 footer {
-    background-color:darkslategray;
+    background-color:#465060;
     color: white;
     text-align: center;
     padding-bottom: 25px;
