--- a/css/youtube-style.css
+++ b/css/youtube-style.css
@@ -17,12 +17,12 @@ header {
 
 p, ol, ul{
     margin-top: 0;
+    margin-bottom: 5px;
 }
  
  
 ol, ul {
-    padding: 0;
-    list-style: none;
+    list-style-type: square;
 }
 
 h1, h2, h3 {
@@ -34,7 +34,6 @@ h1, h2, h3 {
     float: left;
     width: auto;
     margin: none;
-    
     padding-left: 25px;
     padding-top: 30px;
 }
@@ -112,19 +111,30 @@ h1, h2, h3 {
 }
 
 footer {
+    overflow: hidden;
     background-color:#465060;
+    text-align: left;
     color: white;
-    text-align: center;
-    padding-bottom: 25px;
-    padding-top: 25px;
 }
 
 footer img{
-    position:static;
-    width: 80px;
-    height: 90px;
-    padding-top: 15px;
+    float: left;
+    margin: none;
+    width: 200px;
+    height: 180px;
+    border-color: black;
     object-fit: scale-down;
+    padding-right: 100px;
+    padding-left: 100px;
 }
 
-  
+footer p {
+    text-decoration: none;
+    font-family: Proxima Nova;
+    font-weight: 550;
+    font-size: 17px;
+    color: white;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    text-align: center;
+}
