--- a/css/style.css
+++ b/css/style.css
@@ -30,14 +30,9 @@ ol, ul {
 /*************************/
 
 
-.hero-image {
-    background-image: url("../images/lorenzo-mondragon-headshot.jpg");
-    background-color: #cccccc;
-    height: 524px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-top: 0;
+.hero-image img {
+    max-width: 100%;
+    height: auto;
 }
 
 /******************/   
@@ -122,7 +117,6 @@ main {
 main h1 {
     font-size: 30px;
     font-weight: 400;
-    color:#94b49c;
     padding-bottom: 10px;
     word-spacing: 20px;
 }
