--- a/css/youtube-style.css
+++ b/css/youtube-style.css
@@ -27,8 +27,12 @@ ol, ul {
     list-style-type: square;
 }
 
-h1, h2, h3 {
+h1{
     font-size: 30px;
+}
+
+h2, h3, h4{
+    font-size: 25px;
 }
 
 .name {
