add color pallet

--- a/css/bookshelf-style.css
+++ b/css/bookshelf-style.css
@@ -1,11 +1,12 @@
 body {
     font-family: PT Mono, Halvetica, sans-serif;
     margin: 0;
+    background-color: #b4c6ea;
 }
 
 header {
     overflow: hidden;
-    background-color:#465060;
+    background-color:#b4c6ea;
     padding-bottom: 10px;
     padding-top: 5px;
     text-align: left;
@@ -29,7 +30,6 @@ ol, ul {
     float: left;
     width: auto;
     margin: none;
-    
     padding-left: 25px;
     padding-top: 30px;
 }
@@ -39,7 +39,7 @@ ol, ul {
     font-family: Proxima Nova;
     font-weight: 650;
     font-size: 19px;
-    color: white;
+    color: black;
 }
   
 /***************************/
@@ -71,11 +71,10 @@ ol, ul {
 }
 
 .menu li:hover {
-    color: white;
     text-decoration: none;
     display: inline-block;
-    background-color: black;
-    box-shadow: 0 0 0 20px black;
+    background-color: #ceba85;
+    box-shadow: 0 0 0 7px black;
     width: auto;
   }
 
@@ -84,26 +83,15 @@ ol, ul {
     text-decoration: none;
     font-weight: 700;
     font-size: 14px;
-    color: white;
+    color: black;
     display: block;
 }
 
 footer {
     overflow: hidden;
-    background-color:#465060;
+    background-color: #b4c6ea;
     text-align: left;
     color: white;
-}
-
-footer img{
-    float: left;
-    margin: none;
-    width: 200px;
-    height: 180px;
-    border-color: black;
-    object-fit: scale-down;
-    padding-right: 100px;
-    padding-left: 100px;
 }
 
 footer p {
@@ -111,7 +99,7 @@ footer p {
     font-family: Proxima Nova;
     font-weight: 550;
     font-size: 17px;
-    color: white;
+    color: black;
     padding-top: 1%;
     padding-bottom: 1%;
     text-align: center;
