--- a/css/youtube-style.css
+++ b/css/youtube-style.css
@@ -3,11 +3,12 @@
 body {
     font-family: PT Mono, Halvetica, sans-serif;
     margin: 0;
+    background-color: #b4c6ea;
 }
 
 header {
     overflow: hidden;
-    background-color:#465060;
+    background-color:#b4c6ea;
     padding-bottom: 10px;
     padding-top: 5px;
     text-align: left;
@@ -29,9 +30,11 @@ ol, ul {
 
 h1{
     font-size: 30px;
+    color: #254E58;
 }
 
 h2, h3, h4{
+    color: #254E58;
     font-size: 25px;
 }
 
@@ -48,7 +51,7 @@ h2, h3, h4{
     font-family: Proxima Nova;
     font-weight: 650;
     font-size: 19px;
-    color: white;
+    color: black;
 }
   
 /***************************/
@@ -80,11 +83,10 @@ h2, h3, h4{
 }
 
 .menu li:hover {
-    color: white;
     text-decoration: none;
     display: inline-block;
-    background-color: black;
-    box-shadow: 0 0 0 20px black;
+    background-color: #ceba85;
+    box-shadow: 0 0 0 7px black;
     width: auto;
   }
 
@@ -93,7 +95,7 @@ h2, h3, h4{
     text-decoration: none;
     font-weight: 700;
     font-size: 14px;
-    color: white;
+    color: black;
     display: block;
 }
 
@@ -160,20 +162,9 @@ h2, h3, h4{
 
 footer {
     overflow: hidden;
-    background-color:#465060;
+    background-color: #b4c6ea;
     text-align: left;
     color: white;
-}
-
-footer img{
-    float: left;
-    margin: none;
-    width: 200px;
-    height: 180px;
-    border-color: black;
-    object-fit: scale-down;
-    padding-right: 100px;
-    padding-left: 100px;
 }
 
 footer p {
@@ -181,7 +172,7 @@ footer p {
     font-family: Proxima Nova;
     font-weight: 550;
     font-size: 17px;
-    color: white;
+    color: black;
     padding-top: 1%;
     padding-bottom: 1%;
     text-align: center;
