--- a/css/resume-style.css
+++ b/css/resume-style.css
@@ -3,15 +3,15 @@
 body {
     font-family: PT Mono, Halvetica, sans-serif;
     margin: 0;
+    background-color: #b4c6ea;
 }
 
 header {
     overflow: hidden;
-    background-color:#465060;
     padding-bottom: 10px;
     padding-top: 5px;
     text-align: left;
-    color: white;
+    color: black;
     letter-spacing: 0.07em;
     text-transform: uppercase;
 
@@ -29,6 +29,7 @@ ol, ul {
 
 h1, h2, h3, h4, h5 {
     font-size: 30px;
+    color: #254E58;
 }
 
 .content {
@@ -201,7 +202,7 @@ h1, h2, h3, h4, h5 {
     font-family: Proxima Nova;
     font-weight: 650;
     font-size: 19px;
-    color: white;
+    color: black;
 }
   
 /***************************/
@@ -233,11 +234,10 @@ h1, h2, h3, h4, h5 {
 }
 
 .menu li:hover {
-    color: white;
     text-decoration: none;
     display: inline-block;
-    background-color: black;
-    box-shadow: 0 0 0 20px black;
+    background-color: #ceba85;
+    box-shadow: 0 0 0 7px black;
     width: auto;
   }
 
@@ -246,26 +246,15 @@ h1, h2, h3, h4, h5 {
     text-decoration: none;
     font-weight: 700;
     font-size: 14px;
-    color: white;
+    color: black;
     display: block;
 }
 
 footer {
     overflow: hidden;
-    background-color:#465060;
+    background-color:#b4c6ea;
     text-align: left;
     color: white;
-}
-
-footer img{
-    float: left;
-    margin: none;
-    width: 200px;
-    height: 180px;
-    border-color: black;
-    object-fit: scale-down;
-    padding-right: 100px;
-    padding-left: 100px;
 }
 
 footer p {
@@ -273,7 +262,7 @@ footer p {
     font-family: Proxima Nova;
     font-weight: 550;
     font-size: 17px;
-    color: white;
+    color: black;
     padding-top: 1%;
     padding-bottom: 1%;
     text-align: center;
