--- a/css/projects-style.css
+++ b/css/projects-style.css
@@ -2,16 +2,25 @@ body {
     font-family: PT Mono, Halvetica, sans-serif;
     margin: 0;
     background-color: #b4c6ea;
+    font-size: 20px;
+    text-align: left;
 }
 
 p, ol, ul{
     margin-top: 0;
+    margin-bottom: 5px;
 }
  
  
 ol, ul {
-    padding: 0;
-    list-style: none;
+    
+    list-style-type: square;
+}
+
+h1, h2, h3, h4 {
+  font-size: 30px;
+  color: #254E58;
+  padding-top: 50px;
 }
 
 .topnav {
@@ -79,6 +88,46 @@ ol, ul {
       text-align: left;
     }
   }
+
+.content {
+  padding-left: 15%;
+  padding-right: 15%;
+  padding-top: 7%;
+  padding-bottom: 5%;
+  display: block;
+}
+
+.intro {
+  font-size: 20px;
+  text-align: left;
+  padding-bottom: 10x;
+}
+
+.intro img {
+  padding-bottom: 20px;
+}
+
+.p1 {
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+  0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+}
+
+.p2 {
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+}
+
+.p3 {
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+}
+
+.p4 {
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+}
+
+
 
 footer {
     overflow: hidden;
